:memo: Cambio de página 06 a 19

--- a/contenido/pag06.html
+++ b/contenido/pag06.html
@@ -5,150 +5,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pagina 06</title>
+    <title>Página 07</title>
 </head>
 
 <body>
-    <div id="cont-azul"></div>
-    <div id="cont-pag06">
-        <div id="cont-rojo">
-            <div id="clic-pag06">
-                <p>Clic en cada botón para conocer más detalles.</p>
-                <figure class="mano-pag06">
-                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
-                </figure>
-            </div>
-            <figure class="personaje">
-                <img src="./build/img/contenido/Pag06/personaje.svg" alt="personaje">
-            </figure>
-        </div>
-        <div id="cont-rosa">
-            <div class="libros">
-                <div id="libro1">
-                    <a class="btn-pag06" href="#cuadro1">
-                        <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro-azul.svg" alt="libro1">
-                        </figure>
-                    </a>
-                    <h4>Documentación</h4>
-                    <div class="cuadro-pag06" id="cuadro1">
-                        <li>Formato KYC.</li>
-                        <li>Copia de Identificación del Administrador, CEO, Gerente General o Representante legal de la
-                            Cedente.</li>
-                        <li>Documento que acredite la naturaleza del Administrador, CEO, Gerente General o Representante
-                            legal de la Cedente.</li>
-                        <li>Certificación de un auditor independiente o en su caso documento en donde se indique que la
-                            Cedente cuenta con medidas en materia de PLD/CFT.</li>
-                    </div>
-                </div>
-                <div id="libro2">
-                    <a class="btn-pag06" href="#cuadro2">
-                        <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro-naranja.svg" alt="libro2">
-                        </figure>
-                    </a>
-                    <h4>Información</h4>
-                    <div class="cuadro-pag06" id="cuadro2">
-                        <li>Conocer el negocio al que se dedican las contrapartes.</li>
-                        <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
-                            de PLD/CFT.
-                        </li>
-                        <li>Conocer si dichas instituciones
-                            son supervisadas por alguna autoridad competente.
-                        </li>
-                        <li>Identificar su buena reputación, considerando si tienen sanciones por incumplimiento.
-                        </li>
-                    </div>
-                </div>
-                <div id="libro3">
-                    <a class="btn-pag06" href="#cuadro3">
-                        <figure class="img-libro">
-                            <img src="./build/img/contenido/Pag06/libro-verde.svg" alt="libro3">
-                        </figure>
-                    </a>
-                    <h4>En caso de reaseguradora</h4>
-                    <div class="cuadro-pag06" id="cuadro3">
-                        <p>
-                            De acuerdo con la información
-                            de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
-                            abstenerse de realizar operaciones de reaseguro o reafianzamiento
-                            con aquellos que no tengan presencia física en la jurisdicción.
-                            Cuando la Aseguradora tenga indicios sobre algún cliente que actúa por otra persona, deberá
-                            solicitar al cliente información para identificar al Propietario
-                            Real de los recursos involucrados
-                            en la operación.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div id="pag07">
+        <figure id="conversacion">
+            <img src="./build/img/contenido/Pag07/conversacion.svg" alt="conversacion">
+        </figure>
+        <span id="entrevista">
+            <h2>Objetivo de la entrevista</h2>
+            <li>Recabar datos y documentos de identificación.</li>
+            <li>Recabar la declaración firmada del cliente para comprobar si actúa
+                por sí mismo o por un tercero.
+            </li>
+            <li>Documentar y dejar constancia de la entrevista en un expediente.</li>
+        </span>
     </div>
-
-    <!-- Vista Telefono -->
-    <div id="cont-pag06Tel">
-        <div id="cont-img">
-            <figure class="img-personaje">
-                <img src="./build/img/contenido/Pag06/personajeTel.svg" alt="Personaje">
-            </figure>
-            <div id="clic-pag06Tel">
-                <!-- <figure class="mano-pag06">
-                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
-                </figure> -->
-                <p>Clic en cada botón para conocer más detalles.</p>
-            </div>
+    <div id="pag07-2">
+        <figure class="personaje">
+            <img src="./build/img/contenido/Pag07/personaje.svg" alt="personaje">
+        </figure>
+        <div id="globo">
+            Elige tu perfil para identificar la herramienta que debes usar durante la entrevista.
         </div>
-        <div id="libros">
-            <div id="libro1">
-                <a class="btn-pag06Tel" href="#cuadro1-tel">
-                    <figure class="libro1-img">
-                        <img src="./build/img/contenido/Pag06/libro-azulTel.svg" alt="Libro">
-                    </figure>
-                </a>
-                <div class="cuadrosPag06-tel" id="cuadro1-tel">
-                    <li>Formato KYC.</li>
-                    <li>Copia de Identificación del Administrador, CEO, Gerente General o Representante legal de la
-                        Cedente.</li>
-                    <li>Documento que acredite la naturaleza del Administrador, CEO, Gerente General o Representante
-                        legal de la Cedente.</li>
-                    <li>Certificación de un auditor independiente o en su caso documento en donde se indique que la
-                        Cedente cuenta con medidas en materia de PLD/CFT.</li>
+        <div id="cont-blanco">
+            <div class="btn01">
+                <div id="btn-seguros">
+                    <a class="btn_cuadros07" href="#info-seguros">General de Seguros y General de Salud</a>
+                </div>
+                <div class ="cuadros07" id="info-seguros">
+                    <span>Utiliza el formato de Identificación del Cliente con prima anual de mayor a $7,500 dólares.</span>
                 </div>
             </div>
-            <div id="libro2">
-                <a class="btn-pag06Tel" href="#cuadro2-tel">
-                    <figure class="libro2-img">
-                        <img src="./build/img/contenido/Pag06/libro-naranjaTel.svg" alt="Libro">
-                    </figure>
-                </a>
-                <div class="cuadrosPag06-tel" id="cuadro2-tel">
-                    <li>Conocer el negocio al que se dedican las contrapartes.</li>
-                    <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
-                        de PLD/CFT.
-                    </li>
-                    <li>Conocer si dichas instituciones
-                        son supervisadas por alguna autoridad competente.
-                    </li>
-                    <li>Identificar su buena reputación, considerando si tienen sanciones por incumplimiento.
-                    </li>
+            <div class="btn02">
+                <div id="btn-reaseguradora">
+                    <a class="btn_cuadros07" href="#info-reaseguradora">Reaseguradora Patria</a>
                 </div>
-            </div>
-            <div id="libro3">
-                <a class="btn-pag06Tel" href="#cuadro3-tel">
-                    <figure class="libro3-img">
-                        <img src="./build/img/contenido/Pag06/libro-verdeTel.svg" alt="Libro">
-                    </figure>
-                </a>
-                <div class="cuadrosPag06-tel" id="cuadro3-tel">
-                    <p>
-                        De acuerdo con la información
-                        de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
-                        abstenerse de realizar operaciones de reaseguro o reafianzamiento
-                        con aquellos que no tengan presencia física en la jurisdicción.
-                        Cuando la Aseguradora tenga indicios sobre algún cliente que actúa por otra persona, deberá
-                        solicitar al cliente información para identificar al Propietario
-                        Real de los recursos involucrados
-                        en la operación.
-                    </p>
+                <div class ="cuadros07" id="info-reaseguradora">
+                    <span>Utiliza el formato de Identificación de la Cedente.</span>
                 </div>
             </div>
         </div>
