--- a/contenido/pag08.html
+++ b/contenido/pag08.html
@@ -4,60 +4,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 08</title>
+    <title>Página 09</title>
 </head>
 <body>
-    <div id="cont-intro08">
-        <!-- <div id="figura-fondo"></div> -->
+    <div id="cont-pag09">
+        <figure id="persona" class="cont-imagen">
+            <img src="./build/img/contenido/Pag09/persona.svg" alt="persona">
+        </figure>
+        <div class="hojas09" id="hoja09_1">
+            <div class="puntos09">
+                <p>
+                    Al menos una vez al año las entidades deben identificar que los expedientes clasificados como ALTO RIESGO estén completos.
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+            <div class="puntos09">
+                <p>
+                    Si durante la relación comercial se detectan cambios significativos en el comportamiento transaccional, sin que exista causa justificada o surgen dudas sobre la veracidad o exactitud de los datos o documentos, se reclasifica al cliente como de grado de riesgo superior. Al analizarlo se deberá verificar y solicitar la actualización de sus datos y documentos.
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
+            </div>
+            <div class="puntos09">
+                <p>
+                    Las entidades cuentan con un sistema automatizado que permite conservar, actualizar y consultar los datos relativos al expediente de cada cliente. Es indispensable siempre tenerlo actualizado para agilizar cualquier consulta o aclaración. 
 
-        <div id="cont-mensaje08_1">
-            <figure class="cont-imagen">
-                <img src="./build/img/contenido/Pag08/Persona1.svg" alt="persona">
-            </figure>
-            <div id="mensaje1">
-                <div class="caja">
-                    <h3>Consideraciones para el  expediente de identificación</h3>
-                    <ul>
-                        <li>Puede ser físico o electrónico, pero <span>SIEMPRE debe estar completo</span>, con todos los datos y documentos del cliente. </li>
-                        <li><span>Si falta un sólo dato o documento, se considera INCOMPLETO</span>.</li>
-                        <li>Debes resguardarlo durante <span>10 años</span>.</li>
-                        <li><span>Los expedientes incompletos generan sanciones</span> por parte de la autoridad, ten mucho cuidado.</li>
-                    </ul>
-                </div>
+                </p>
+                <figure class="contimagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
             </div>
         </div>
+        <div class="hojas09" id="hoja09_2">
+            <h4>
+                Para que el expediente se considere completo debe contener:
+            </h4>
 
-        <div id="cont-mensaje08_2">
-            <div id="cont-alerta">
-                <div id="alerta">
-                    <h4 id="titulo-mensaje">
-                        Medidas simplificadas de identificación
-                    </h4>
-                    <div id="contenido">
-                        <div class="cont-imagen">
-                            <img src="./build/img/contenido/Pag08/Señal.svg" alt="señal">
-                        </div>
-                        <div id="alerta-mensaje">
-                            <h4>Nota:</h4>
-                            <p id="p1">
-                                Se entenderá por Tachadura y Enmendadura a la alteración del contexto de un Documento.
-                            </p>
-                            <p>
-                                Cuando los documentos de identificación proporcionados presenten tachaduras, o enmendaduras o sean ilegibles, el Agente o Colaborador solicitará nuevamente el documento, o recabará otro medio de identificación elegido de entre los descritos en el Manual de Cumplimiento PLD/CFT y hará la verificación correspondiente.
-                            </p>
-                        </div>
-                    </div>
+            <div class="puntos09">
+                <div class="cont-ul">
+                    <h5>Datos:</h5>
+                    <ul>
+                        <li>Que se incluyan los obligatorios.</li>
+                        <li>Que no tenga abreviaturas.</li>
+                        <li>Los datos declarados deberán coincidir con los documentos proporcionados.</li>
+                    </ul>
                 </div>
+
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
             </div>
-            <div id="mensaje08_2">
-                <div id="globo">
-                    <p>
-                        Los expedientes con los datos y documentos del cliente deben conservarse todo el tiempo de vigencia del contrato y durante un periodo no menor a 10 años luego de concluir la relación comercial.
-                    </p>
+
+            <div class="puntos09">
+                <div class="cont-ul">
+                    <h5>Documentos:</h5>
+                    <ul>
+                        <li>No olvides corroborar que sean oficiales 
+                            y vigentes.</li>
+                        <li>Verifica que sean legibles.</li>
+                        <li>Copia del mismo documento: cotejo original y copia.</li>
+                        <li>Recibe solamente copias en buen estado.</li>
+                        <li>Sin tachaduras o enmendaduras.</li>
+                    </ul>
                 </div>
-                <div class="cont-imagen">
-                    <img src="./build/img/contenido/Pag08/Persona2.svg" alt="persona">
-                </div>
+
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag09/paloma.svg" alt="paloma">
+                </figure>
             </div>
         </div>
     </div>
