--- a/contenido/pag10.html
+++ b/contenido/pag10.html
@@ -1,43 +1,109 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 10</title>
+    <title>Página 11</title>
 </head>
+
 <body>
-    <div id="cont-pag10">
-        <div id="cont-mensaje10">
-            <figure class="cont-imagen">
-                <img src="./build/img/contenido/Pag10/persona.svg" alt="persona">
-            </figure>
-            <div id="mensaje">
-                <div id="globo">
-                    <p>
-                        A partir de la identificación del cliente se realiza el conocimiento del cliente que nos permite generar un perfil transaccional del cliente y verificar que su comportamiento sea acorde con las operaciones que realiza el Cliente y así como saber si se trata de una Persona Políticamente Expuesta (PPE o PEP). 
-                    </p>
-                    <p>
-                        Para conocer más sobre este tema, da clic en el botón y descarga la infografía:
+    <div id="cont-intro11">
+        <div class="instrucciones-mano">
+            <div class="cont-imagen">
+                <img src="./build/img/contenido/Pag11/Mano.svg" alt="mano">
+            </div>
+            <p>
+                Da clic en cada tarjeta para conocer más detalles.
+            </p>
+        </div>
+    </div>
+    <div id="cont-tarjetas-flip">
+        <div class="cards" id="flip1">
+            <div class="front caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones relevantes</h3>
+                </div>
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag11/Billetes.svg" alt="billetes">
+                </figure>
+                <div class="cont-mensaje-front">
+                    <p>Operación en efectivo realizada una sola exhibición por el equivalente o más de $7,500 dólares.
                     </p>
                 </div>
             </div>
-        </div>
-        <div id="cont-descarga">
-            <div class="instrucciones-mano">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag10/Mano.svg" alt="mano">
-                </figure>
-                <p>
-                    Da clic aquí para descargar la infografía.
-                </p>
+            <div class="back caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones relevantes</h3>
+                </div>
+                <div class="cont-mensaje-back">
+                    <p>Operación que se realiza en una sola exhibición, en efectivo, así como cheques de viajero y
+                        monedas acuñadas en platino, oro y plata; por un monto igual o superior al equivalente en moneda
+                        nacional a siete mil quinientos dólares de los Estados Unidos de América. Los principales
+                        encargados de ejecutar estas actividades son las áreas de administración de recursos como por
+                        ejemplo finanzas y siniestros.</p>
+                    <p>Incluso sin haber realizado estas operaciones, debemos enviar un reporte en ceros a través de
+                        SEIVE (Sistema de Entrega de Información Vía Electrónica).</p>
+                </div>
             </div>
-            <a href="../Infografia/infografia_Pol_Conocimiento_Cliente_v2.pdf" target="_blank" title="Descargar Infografia">
-                <figure id="descarga">
-                    <img src="./build/img/contenido/Pag10/pdf.svg" alt="pdf">
+        </div>
+        <div class="cards" id="flip2">
+            <div class="front caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones inusuales</h3>
+                </div>
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag11/Lupa.svg" alt="lupa">
                 </figure>
-            </a>
+                <div class="cont-mensaje-front">
+                    <p>Operación o conducta que no concuerde con los antecedentes, actividades, operaciones o conductas
+                        del cliente.</p>
+                </div>
+            </div>
+            <div class="back caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones inusuales</h3>
+                </div>
+                <div class="cont-mensaje-back">
+                    <p>Operación o conducta de un cliente que no concuerde con los antecedentes o actividad conocida por
+                        la Compañía, o declarada a ésta, o con el perfil transaccional inicial o habitual de dicho
+                        cliente, en función al origen o destino de los recursos, así como al monto, frecuencia, tipo o
+                        naturaleza de la operación de que se trate, sin que exista una justificación razonable para
+                        dicha operación, actividad, conducta o comportamiento; o bien, aquella operación, actividad,
+                        conducta o comportamiento que un cliente realice o pretenda realizar con la Compañía.</p>
+                </div>
+            </div>
+        </div>
+        <div class="cards" id="flip3">
+            <div class="front caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones internas preocupantes</h3>
+                </div>
+                <figure class="cont-imagen">
+                    <img src="./build/img/contenido/Pag11/Persona.svg" alt="persona">
+                </figure>
+                <div class="cont-mensaje-front">
+                    <p>Operaciones o conductas realizadas por los Colaboradores de la Compañía relacionadas con el LD y
+                        FT.
+                    </p>
+                </div>
+            </div>
+            <div class="back caras">
+                <div class="cont-titulo">
+                    <h3>Operaciones internas preocupantes</h3>
+                </div>
+                <div class="cont-mensaje-back">
+                    <p>Operación, actividad, conductao comportamiento de cualquiera de los Funcionarios, Colaboradores y
+                        Agentes de la Compañía, que por sus características, pudiera contravenir, vulnerar o evadir la
+                        aplicación de lo dispuesto por la LISF; o aquella, que por cualquier otra causa, resulte dudosa
+                        para la Institución por considerar que pudiese favorecer o no alertar sobre la actualización de
+                        clientes que pudieran ubicarse en alguno de los supuestos previstos en los artículos 139, 139
+                        Quáter, 148 Bis o 400 Bis del Código Penal Federal.</p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
