--- a/contenido/pag19.html
+++ b/contenido/pag19.html
@@ -1,148 +1,158 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página 19</title>
+    <title>Pagina 06</title>
 </head>
+
 <body>
-    <div id="cont-intro19">
-        <div class="titulo">
-            <h3>En la politica de identificación</h3>
-        </div>
-
-        <div class="tarjetas">
-            <div class="tarjeta" id="tarjeta1">
-                <ul>
-                    <li>Se incorpora la  identificación de compradores  de salvamentos y entidades fiduciarias.</li>
-                </ul>
-            </div>
-            <div class="tarjeta" id="tarjeta2">
-                <ul>
-                    <li>Verificación de los datos y documentos que nuestros posibles clientes nos proporcionen para acreditar su identidad, podrá realizarse de forma no presencial; igualmente para contrataciones, la entrevista podrá realizarse de forma no presencial. En ambos casos conforme a las disposiciones que al efecto emita la Comisión.
-                    </li>
-                    <li>Contar con medidas para mitigar el alto Riesgo.</li>
-                </ul>
-            </div>
-            <div class="tarjeta" id="tarjeta3">
-                <ul>
-                    <li>Las Compañías podrán suspender el proceso de  identificación cuando se estime de forma razonable 
-                    que nuestros posibles clientes se encuentran relacionados con operaciones de lavado de dinero o alguno de los riesgos previstos en el Manual de Cumplimiento PLD/CFT.
-                    </li>
-                </ul>
-            </div>
-        </div>
-
-        <div id="titulo2">
-            <h3>Se adiciona un capítulo de Enfoque Basado en Riesgo.</h3>
-        </div>
-
-        <div id="columnas">
-            <div id="columna1">
-                <figure class="cont-imagen">
-                    <img src="./build/img/contenido/Pag19/persona-pizarra.svg" alt="">
+    <div id="cont-azul"></div>
+    <div id="cont-pag06">
+        <div id="cont-rojo">
+            <div id="clic-pag06">
+                <p>Clic en cada botón para conocer más detalles.</p>
+                <figure class="mano-pag06">
+                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
                 </figure>
-                <div class="cuadro">
-                    <div class="titulo">
-                        <h3>Para implementar</h3>
-                    </div>
-                    <div class="info">
-                        <p>Una metodología de Evaluación de Grado de Riesgos que permita identificar el riesgo de Lavado de Dinero y financiamiento al Terrorismo al que se encuentra expuesta la Compañía.</p>
-                    </div>
-                </div>
             </div>
-            <div id="columna2">
-                <div id="caja1">
-                    <div class="titulo">
-                        <h3>En la Política de Conocimiento:</h3>
-                    </div>
-                    <div class="contenedor1_1">
-                        <div class="cont-globo">
-                            <div class="globo">
-                                <p>
-                                    En operaciones celebradas de forma no presencial, deberá obtenerse la información relativa a la geolocalización.
-    
-                                </p>
-                            </div>
-                        </div>
-                        <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag19/persona-esc.svg" alt="">
+            <figure class="personaje">
+                <img src="./build/img/contenido/Pag06/personaje.svg" alt="personaje">
+            </figure>
+        </div>
+        <div id="cont-rosa">
+            <div class="libros">
+                <div id="libro1">
+                    <a class="btn-pag06" href="#cuadro1">
+                        <figure class="img-libro">
+                            <img src="./build/img/contenido/Pag06/libro-azul.svg" alt="libro1">
                         </figure>
+                    </a>
+                    <h4>Documentación</h4>
+                    <div class="cuadro-pag06" id="cuadro1">
+                        <li>Formato KYC.</li>
+                        <li>Copia de Identificación del Administrador, CEO, Gerente General o Representante legal de la
+                            Cedente.</li>
+                        <li>Documento que acredite la naturaleza del Administrador, CEO, Gerente General o Representante
+                            legal de la Cedente.</li>
+                        <li>Certificación de un auditor independiente o en su caso documento en donde se indique que la
+                            Cedente cuenta con medidas en materia de PLD/CFT.</li>
                     </div>
                 </div>
-                <div id="caja2">
-                    <div class="globo">
-                        <p>Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de  los clientes.</p>
+                <div id="libro2">
+                    <a class="btn-pag06" href="#cuadro2">
+                        <figure class="img-libro">
+                            <img src="./build/img/contenido/Pag06/libro-naranja.svg" alt="libro2">
+                        </figure>
+                    </a>
+                    <h4>Información</h4>
+                    <div class="cuadro-pag06" id="cuadro2">
+                        <li>Conocer el negocio al que se dedican las contrapartes.</li>
+                        <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
+                            de PLD/CFT.
+                        </li>
+                        <li>Conocer si dichas instituciones
+                            son supervisadas por alguna autoridad competente.
+                        </li>
+                        <li>Identificar su buena reputación, considerando si tienen sanciones por incumplimiento.
+                        </li>
+                    </div>
+                </div>
+                <div id="libro3">
+                    <a class="btn-pag06" href="#cuadro3">
+                        <figure class="img-libro">
+                            <img src="./build/img/contenido/Pag06/libro-verde.svg" alt="libro3">
+                        </figure>
+                    </a>
+                    <h4>En caso de reaseguradora</h4>
+                    <div class="cuadro-pag06" id="cuadro3">
+                        <p>
+                            De acuerdo con la información
+                            de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
+                            abstenerse de realizar operaciones de reaseguro o reafianzamiento
+                            con aquellos que no tengan presencia física en la jurisdicción.
+                            Cuando la Aseguradora tenga indicios sobre algún cliente que actúa por otra persona, deberá
+                            solicitar al cliente información para identificar al Propietario
+                            Real de los recursos involucrados
+                            en la operación.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div id="cards">
-            <div class="operaciones">
-                <div class="titulo">
-                    <h3>En Operaciones Relevantes, Inusuales e Internas Preocupantes: </h3>
-                </div>
-
-                <div class="columnas">
-                    <div class="tarjetas1_1" id="card1">
-                        <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag19/circulo1.svg" alt="">
-                        </figure>
-                        <div class="info" id="info1">
-                            <p>
-                                Ahora las operaciones <span>relevantes</span> se reportarán por un monto igual o superior a <span>$7,500</span> dólares de los Estados Unidos.
-                            </p>
-                        </div>
-                    </div>
-                    <div class="tarjetas1_1" id="card2">
-                        <figure class="cont-imagen">
-                            <img src="./build/img/contenido/Pag19/circulo2.svg" alt="">
-                        </figure>
-                        <div class="info" id="info2">
-                            <p>
-                                <span>Las operaciones inusuales e internas preocupantes</span> deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de Comunicación y Control las haya dictaminado conese carácter.
-                            </p>
-                        </div>
-                    </div>
-                </div>
+    <!-- Vista Telefono -->
+    <div id="cont-pag06Tel">
+        <div id="cont-img">
+            <figure class="img-personaje">
+                <img src="./build/img/contenido/Pag06/personajeTel.svg" alt="Personaje">
+            </figure>
+            <div id="clic-pag06Tel">
+                <!-- <figure class="mano-pag06">
+                    <img src="./build/img/contenido/Pag06/mano.svg" alt="mano">
+                </figure> -->
+                <p>Clic en cada botón para conocer más detalles.</p>
             </div>
-
-            <div class="estructuras">
-                <div class="titulo">
-                    <h3>En Estructuras Internas:</h3>
-                </div>
-
-                <div class="tarjetas1_1" id="card3">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag19/circulo3.svg" alt="">
+        </div>
+        <div id="libros">
+            <div id="libro1">
+                <a class="btn-pag06Tel" href="#cuadro1-tel">
+                    <figure class="libro1-img">
+                        <img src="./build/img/contenido/Pag06/libro-azulTel.svg" alt="Libro">
                     </figure>
-                    <div class="info" id="info3">
-                        <p>
-                            Podrá nombrarse a un <span>Oficial de Cumplimiento</span> interino, en caso de ausencia temporal del mismo.
-                        </p>
-                    </div>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro1-tel">
+                    <li>Formato KYC.</li>
+                    <li>Copia de Identificación del Administrador, CEO, Gerente General o Representante legal de la
+                        Cedente.</li>
+                    <li>Documento que acredite la naturaleza del Administrador, CEO, Gerente General o Representante
+                        legal de la Cedente.</li>
+                    <li>Certificación de un auditor independiente o en su caso documento en donde se indique que la
+                        Cedente cuenta con medidas en materia de PLD/CFT.</li>
                 </div>
             </div>
-
-            <div class="capacitacion">
-                <div class="titulo">
-                    <h3>En Capacitación y Difusión:</h3>
-                </div>
-                <div class="tarjetas1_1" id="card4">
-                    <figure class="cont-imagen">
-                        <img src="./build/img/contenido/Pag19/circulo4.svg" alt="">
+            <div id="libro2">
+                <a class="btn-pag06Tel" href="#cuadro2-tel">
+                    <figure class="libro2-img">
+                        <img src="./build/img/contenido/Pag06/libro-naranjaTel.svg" alt="Libro">
                     </figure>
-                    <div class="info" id="info4">
-                        <p>
-                            La Capacitación deberá ser tomada <span>también por los miembros de los Consejos de Administración.</span>
-                        </p>
-                    </div>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro2-tel">
+                    <li>Conocer el negocio al que se dedican las contrapartes.</li>
+                    <li>Evaluar sus controles para determinar que cumplen con los estándares internacionales
+                        de PLD/CFT.
+                    </li>
+                    <li>Conocer si dichas instituciones
+                        son supervisadas por alguna autoridad competente.
+                    </li>
+                    <li>Identificar su buena reputación, considerando si tienen sanciones por incumplimiento.
+                    </li>
                 </div>
             </div>
-
+            <div id="libro3">
+                <a class="btn-pag06Tel" href="#cuadro3-tel">
+                    <figure class="libro3-img">
+                        <img src="./build/img/contenido/Pag06/libro-verdeTel.svg" alt="Libro">
+                    </figure>
+                </a>
+                <div class="cuadrosPag06-tel" id="cuadro3-tel">
+                    <p>
+                        De acuerdo con la información
+                        de las autoridades mexicanas en materia de prevención PLD/CFT, las Aseguradoras deberán
+                        abstenerse de realizar operaciones de reaseguro o reafianzamiento
+                        con aquellos que no tengan presencia física en la jurisdicción.
+                        Cuando la Aseguradora tenga indicios sobre algún cliente que actúa por otra persona, deberá
+                        solicitar al cliente información para identificar al Propietario
+                        Real de los recursos involucrados
+                        en la operación.
+                    </p>
+                </div>
+            </div>
         </div>
     </div>
 </body>
+
 </html>
