:bookmark: Add item slide Aseguradora

--- a/contenido/pag26.html
+++ b/contenido/pag26.html
@@ -135,6 +135,18 @@
                         </figure>
                       </div>
                   </div>
+                  <div class="carousel-item">
+                    <div class="w-100">
+                        <div class="informacion">
+                            <p>Finalmente, se realiza la contratación de la póliza teniendo un pago único y realizado en transferencia.
+                            </p>
+                            <p>Al mes, el cliente solicita la cancelación anticipada.</p>
+                        </div>
+                        <figure class="cont-imagen">
+                            <img src="./build/img/contenido/Pag26/tabla.svg" alt="icono">
+                        </figure>
+                      </div>
+                  </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselAseguradora" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
