:heavy_minus_sign: Eliminacion contenido pag05

--- a/contenido/pag05.html
+++ b/contenido/pag05.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div id="cont-intro5">
+    <!-- <div id="cont-intro5">
         <div class="cont-imagen">
             <img src="./build/img/contenido/Pag05/Persona.svg" alt="Persona">
         </div>
@@ -109,7 +109,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div id="cont-mensaje05_2">
         <div class="cont-imagen">
