:white_check_mark: Cambios de texto

--- a/contenido/pag14.html
+++ b/contenido/pag14.html
@@ -22,9 +22,7 @@
             </figure>
         </a>
         <div class ="globos12" id="globo1">
-            1. Deberás mantener confidencialidad respecto de la información de envío de reportes o requerimientos de
-            información y documentación, a la CNSF y demás autoridades facultadas para la prevención, investigación,
-            persecución y sanción en materia de Lavado de Dinero.
+            1. Deberás mantener confidencialidad respecto de la información de envío de reportes o requerimientos de información y documentación, a la CNSF y demás autoridades facultadas.
         </div>
     </div>
     <div id="columnas">
