--- a/contenido/pag07.html
+++ b/contenido/pag07.html
@@ -30,9 +30,9 @@
         <div id="cont-mensaje08_2">
             <div id="cont-alerta">
                 <div id="alerta">
-                    <h4 id="titulo-mensaje">
+                    <!-- <h4 id="titulo-mensaje">
                         Medidas simplificadas de identificación
-                    </h4>
+                    </h4> -->
                     <div id="contenido">
                         <div class="cont-imagen">
                             <img src="./build/img/contenido/Pag08/Señal.svg" alt="señal">
