--- a/contenido/pag21.html
+++ b/contenido/pag21.html
@@ -84,8 +84,8 @@
 
                 <div class="filas">
                     <div class="enunciados" id="enunciado2" data-enunciado="2">
-                        <p>Se adiciona un riesgo medio entre alto y bajo a la clasificación del grado de riesgo de los
-                            clientes.</p>
+                        <p>Te permite enviar directamente al área a cargo del Oficial de Cumplimiento, avisos sobre operaciones o conductas que detectes de cualquiera, de otros Colaboradores, Clientes o Agentes, identificadas como Operaciones inusuales u Operaciones Internas Preocupantes.
+                        </p>
                     </div>
                     <div id="bloquearEnunciado2" class="bloquear"></div>
 
@@ -122,8 +122,8 @@
 
                 <div class="filas">
                     <div class="enunciados" id="enunciado3" data-enunciado="3">
-                        <p>En esta política se incorpora la identificación de compradores de salvamentos y entidades
-                            fiduciarias.</p>
+                        <p>¿A quien se le envía el aviso sobre conductas u operaciones internas preocupantes o inusuales detectadas?
+                        </p>
                     </div>
                     <div id="bloquearEnunciado3" class="bloquear"></div>
 
@@ -186,7 +186,7 @@
                         </div>
                         <div class="filas">
                             <div class="conceptos4" id="concepto1" data-definicion="2">
-                                <p>Política de Conocimiento</p>
+                                <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales.</p>
                             </div>
                         </div>
                         <div class="filas">
@@ -200,8 +200,7 @@
 
                 <div class="filas">
                     <div class="enunciados" id="enunciado5" data-enunciado="5">
-                        <p>Deberán ser enviadas a la autoridad dentro de los tres días siguientes a que el Comité de
-                            Comunicación y Control las haya dictaminado con ese carácter.
+                        <p>El Oficial de Cumplimiento la somete al análisis y dictamen del:
                         </p>
                     </div>
                     <div id="bloquearEnunciado5" class="bloquear"></div>
@@ -268,13 +267,13 @@
                 </div>
                 <div class="filas">
                     <div class="conceptos" id="concepto1" data-definicion="2">
-                        <p>Política de Conocimiento</p>
+                        <p>Buzón de Denuncia para operaciones internas preocupantes e inusuales</p>
                     </div>
                     <div id="bloquearConcepto2" class="bloquear"></div>
                 </div>
                 <div class="filas">
                     <div class="conceptos" id="concepto1" data-definicion="4">
-                        <p>Manual de cumplimiento</p>
+                        <p>Manual de Cumplimiento</p>
                     </div>
                     <div id="bloquearConcepto4" class="bloquear"></div>
                 </div>
