:memo: Cambios de secciones

--- a/contenido/pag20.html
+++ b/contenido/pag20.html
@@ -147,5 +147,60 @@
 
         </div>
     </div>
+
+    <h2 id="subtitulo20">Obligación en caso de que la Compañía sea titular de una cuenta     Concentradora</h2>
+
+    <div id="pag12">
+        <div id="cont-01">
+            <figure class="personaje">
+                <img src="./build/img/contenido/Pag13/personaje.svg" alt="Personaje">
+            </figure>
+            <span id="clic1-pag12">
+                <figure class="mano1-pag12">
+                    <img src="./build/img/contenido/Pag13/mano.svg" alt="mano">
+                </figure>
+                <p>Da clic en cada botón para conocer más detalles.</p>
+            </span>
+        </div>
+        <div id="cont-02">
+            <div id="globo">
+                Se llama cuenta concentradora a la cuenta bancaria de depósito de dinero, a favor de la aseguradora para
+                el pago de primas, deducibles o compra de salvamentos.
+            </div>
+            <div id="cont-botones">
+                <div id="btn-01">
+                    <div id="btn-aplicar">
+                        <a class="btn_cuadros12" href="#info-seguros">Aplicar</a>
+                    </div>
+                    <div class="cuadros12" id="info-seguros">
+                        <span>Respecto de sus clientes que efectúen transacciones en las cuentas concentradoras, las
+                            políticas y medidas de identificación y conocimiento previstas en el Manual de Cumplimiento
+                            PLD/CFT.</span>
+                    </div>
+                </div>
+                <div id="btn-02">
+                    <div id="btn-seguimiento">
+                        <a class="btn_cuadros12" href="#info-seguimiento">Dar seguimiento</a>
+                    </div>
+                    <div class="cuadros12" id="info-seguimiento">
+                        <span>A todas las transacciones realizadas en dichas cuentas concentradoras, y para tal efecto,
+                            verificar que la Institución Bancaria que lleve la cuenta concentradora
+                            le reporte.
+                        </span>
+                    </div>
+                </div>
+                <div id="btn-03">
+                    <div id="btn-reportar">
+                        <a class="btn_cuadros12" href="#info-reportar">Reportar</a>
+                    </div>
+                    <div class="cuadros12" id="info-reportar">
+                        <span>A la SHCP, en los términos
+                            de las Disposiciones y conforme a la información que
+                            le proporcionen las Instituciones Bancarias que manejan las cuentas concentradoras.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
