--- a/contenido/pag05.html
+++ b/contenido/pag05.html
@@ -28,7 +28,108 @@
         Momentos de Identificación del Cliente
     </h3>
 
-    <div id="cont-botones05">
+    <div id="cont-columnas">    
+        <div id="cont01">
+            <div  class="contenedor cont-naranja">
+                <p class="textColorWhite alingCenter">General de Seguros y General de Salud</p>
+            </div>
+            <div class="contenido">
+                <div class="maxWidth cont-naranja textColorWhite">
+                    <p>En caso de Emisión:</p>
+                </div>
+                <div class="texto01">
+                    <span>
+                        Recabar del Cliente datos y documentos previamente a la Celebración del contrato:
+                        del Beneficiario en caso de que sea designado,
+                        sólo se le pedirán tres datos: nombre, fecha
+                        de nacimiento y domicilio.
+                        La identificación del Cliente puede hacerse
+                        bajo los umbrales previstos en el régimen simplificado.
+                    
+                    </span>
+                </div>
+                <div class="maxWidth cont-naranja textColorWhite">
+                    <p>En caso de Siniestros:</p>
+                </div>
+                <div class="texto01">
+                    <span>
+                        Antes de que se entreguen recursos por cualquier concepto, o a más tardar cuando se presenten
+                        a ejercer sus derechos:
+                    </span>
+                    <li>Entrega de recursos: chequeo transferencia.</li>
+                    <li>Sin importar el monto (desde un peso).</li>
+                    <li>Cualquier concepto (cuando aplique el
+                        siniestro): devolución de prima,
+                        cancelación anticipada, prima no
+                        devengada, rescisión, agravación de
+                        siniestro, supervivencia, fallecimiento,
+                        cancelación de compra de salvamentos,
+                        retiro total de productos con
+                        componentes de inversión.</li>
+                </div>
+                <div class="maxWidth cont-naranja textColorWhite">
+                    <p>La batería de datos y documentos utilizados debe estar disponible para consulta.</p>
+                </div>
+                <div class="texto01">
+                </div>
+                <div class="maxWidth cont-naranja textColorWhite">
+                    <p>Umbrales de Identificación:</p>
+                </div>
+                <div class="texto01">
+                    <li>Prima anual menor a 2,500 dólares.</li>
+                    <li>Prima anual entre 2,500 dólares y menor a 7,500 dólares.</li>
+                    <li>Prima superior a 7,500 dólares.</li>
+                    <li>Para las Dependencias y Entidades. </li>
+                    <li>Públicas Federales Estatales, Municipales 
+                        y Empresas del Sector Financiero, se aplican 
+                        las Medidas Simplificadas de Identificación.</li>
+                </div>
+                <div class="maxWidth cont-naranja textColorWhite">
+                    <p>Cambios de Umbrales:</p>
+                </div>
+                <div class="texto01">
+                    <li>En el momento en que se detecte que el   
+                        Cliente con la misma operación o por varias 
+                        rebase el umbra  inicial de identificación, 
+                        deberá integrar su expediente conforme al 
+                        nuevo umbral de operación en que se 
+                        encuentre.  
+                      </li>
+                </div>
+            </div>
+        </div>
+        <div id="cont02">
+            <div class="contenedor cont-azul" >
+                <p class="textColorWhite alingCenter">Reaseguradora Patria</p>
+            </div>
+            <div class="contenido">
+                <div class="maxWidth cont-azul textColorWhite">
+                    <p>Al inicio de la relación comercial:</p>
+                </div>
+                <div class="texto02">
+                    <li>Recabar de la Cedente datos 
+                        y documentos previamente a la  
+                        Celebración del contrato. </li>
+                    <p class="espacio">Para realizar la identificación de la Cedente se hará bajo las medidas Simplificadas.</p>
+                    <li>En caso de la Reaseguradora.</li>
+                    <li>Solo puede hacerse al inicio de la relación 
+                        comercial. </li>   
+                </div>
+                <div class="maxWidth cont-azul textColorWhite">
+                    <p>Conforme a las Medidas Simplificadas – Identificación de Cedentes</p>
+                </div>
+                <div class="texto02">
+                    <li>Instituciones de Nacionalidad Mexicana.</li>
+                    <li>Instituciones de Nacionalidad Extranjera.</li>
+                </div>
+                <div class="texto02 cont-imagen personaje">
+                    <img src="./build/img/contenido/Pag05/personaje.svg" alt="personaje">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- <div id="cont-botones05">
         <div id="cont-instrucciones">
             <div class="instrucciones-mano">
                 <div class="cont-imagen">
@@ -109,7 +210,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div> -->
 
     <div id="cont-intro5">
         <div class="cont-imagen">
